--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -19,10 +19,7 @@
         <img src="./assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
         <nav>
             <ul class="cabecalho__lista-navegacao">
-                <li class="cabecalho__link"><a href="#">Dashboard</a></li>
-                <li class="cabecalho__link"><a href="#">Produtos</a></li>
-                <li class="cabecalho__link"><a href="lista_cliente.html">Clientes </a></li>
-                <li class="cabecalho__link"><a href="#">Pets</a></li>
+                <li class="cabecalho__link"><a href="./index.html">Cadastro de Clientes</a></li>
             </ul>
         </nav>
     </header>
