--- a/cadastro.html
+++ b/cadastro.html
@@ -11,8 +11,17 @@
     <link rel="stylesheet" href="./assets/css/componentes/cartao.css">
     <link rel="stylesheet" href="./assets/css/componentes/inputs.css">
     <link rel="stylesheet" href="./assets/css/componentes/botao.css">
+    <link rel="stylesheet" href="./assets/css/componentes/cabecalho.css">
 </head>
 <body>
+    <header class="cabecalho container">
+        <img src="./assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
+        <nav>
+            <ul class="cabecalho__lista-navegacao">
+                <li class="cabecalho__link"><a href="./cadastro_produto.html">Cadastro de Produto</a></li>
+            </ul>
+        </nav>
+    </header>
     <main class="container flex flex--coluna flex--centro">
         <div class="cadastro-cabecalho">
             <img src="./assets/img/doguito.svg" alt="Logo Doguito" class="cadastro-cabecalho__logo">
