--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -19,7 +19,10 @@
         <img src="./assets/img/doguitoadm.svg" alt="Logo Doguito" class="cabecalho__logo">
         <nav>
             <ul class="cabecalho__lista-navegacao">
-                <li class="cabecalho__link"><a href="./index.html">Cadastro de Clientes</a></li>
+                <li class="cabecalho__link"><a href="#">Dashboard</a></li>
+                <li class="cabecalho__link"><a href="#">Produtos</a></li>
+                <li class="cabecalho__link"><a href="lista_cliente.html">Clientes </a></li>
+                <li class="cabecalho__link"><a href="#">Pets</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +41,7 @@
                     <span class="input-mensagem-erro">Este campo não está válido</span>
                 </div>
                 <div class="input-container cadastro__descricao-container">
-                    <input class="input" name="descricao" id="descricao" placeholder="Descrição">
+                    <input class="input" name="descricao" id="descricao" placeholder="Descrição" type="text" data-tipo="descricao" required>
                     <label class="input-label" for="descricao">Descrição</label>
                     <span class="input-mensagem-erro">Este campo não está válido</span>
                 </div>
